--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src='index.js' async>
-    </script>
+
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <meta name="description" content="Bienvenue chez Orinoco ! Un e-commerce qui se démarque des autres sites en créant des applications thématiques et en vendant qu'un seul groupe de produits!" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <meta name="description"
+        content="Bienvenue chez Orinoco ! Un e-commerce qui se démarque des autres sites en créant des applications thématiques et en vendant qu'un seul groupe de produits!" />
 
     <title>Orinoco - Site e-commerce</title>
 </head>
@@ -17,6 +18,7 @@
 <body>
     <header>
         <div class="head-section">
+            <p><img src="front-end/orinoco.jpg>"> </p>
             <h1><a href="index.html">Orinoco</a></h1>
             <div class="comptes">
                 <div class="compte">
@@ -33,7 +35,7 @@
                 </div>
             </div>
             <div id="menuPanier">
-                <a href="../front-end/panier.html" role="button"><i class="fas fa-shopping-basket"></i> Panier</a>
+                <a href="/front-end/panier.html" role="button"><i class="fas fa-shopping-basket"></i> Panier</a>
             </div>
         </div>
     </header>
@@ -46,10 +48,9 @@
         </div>
 
         <h2>À vous de choisir parmi nos ours en peluche</h2>
-            <button type="button" class="btn btn-primary">Détail article</button> <br/>
 
         <table>
-        <caption>Liste des produits disponibles</caption>
+            <caption>Liste des produits disponibles</caption>
         </table>
         <section id="allproducts" class="row row-cols-1 row-cols-md-3 g-4">
 
@@ -86,11 +87,19 @@
     <!--Optinal JavaScript-->
     <!--jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+        <script src='index.js' async> </script>
 
 </body>
 
