--- a/front-end/article.html
+++ b/front-end/article.html
@@ -25,17 +25,11 @@
 
         <header>
             <div class="row">
-                <div class="col-3">
-                    <!--logo-->
-                </div>
+                <div class="col-3"> </div>
 
-                <div class="col-6">
-                    <!--marque-->
-                </div>
+                <div class="col-6"> </div>
 
-                <div class="col-3">
-                    <!--panier-->
-                </div>
+                <div class="col-3"> </div>
             </div>
         </header>
 
@@ -47,17 +41,11 @@
 
         <footer>
             <div class="row">
-                <div class="col-3">
-                    <!--mentions légales-->
-                </div>
+                <div class="col-3"> </div>
 
-                <div class="col-6">
-                    <!--réseaux sociaux-->
-                </div>
+                <div class="col-6"> </div>
 
-                <div class="col-3">
-                    <!--info société-->
-                </div>
+                <div class="col-3"> </div>
             </div>
         </footer>
 
