modification of the logo source

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="head-section">
-            <p><img src="front-end/orinoco.jpg>"> </p>
+            <p><img src="orinoco.jpg"> </p>
             <h1><a href="index.html">Orinoco</a></h1>
             <div class="comptes">
                 <div class="compte">
@@ -49,13 +49,12 @@
 
         <h2>À vous de choisir parmi nos ours en peluche</h2>
 
-        <table>
             <caption>Liste des produits disponibles</caption>
-        </table>
-        <section id="allproducts" class="row row-cols-1 row-cols-md-3 g-4">
 
+            <section  class="container g-4">
+                    <div class="row" id="allproducts"></div>
+                <!--Insertion du contenu via le fichier index.js -->
         </section>
-        <!--Insertion du contenu via le fichier index.js -->
     </main>
 
     <footer>
@@ -99,7 +98,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-        <script src='index.js' async> </script>
+    <script src='index.js' async> </script>
 
 </body>
 
