--- a/front-end/index.html
+++ b/front-end/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="head-section">
-            <p><img src="orinoco.jpg"> </p>
+            <p><img src="orinoco.jpg" alt="logo"> </p>
             <h1><a href="index.html">Orinoco</a></h1>
             <div class="comptes">
                 <div class="compte">
@@ -43,18 +43,18 @@
     <main>
         <h2>Une fabrication française</h2>
         <div class="metier">
-            <p>Nos ours en peluche sont fabriqués à la main dans nos ateliers en France.<br> La fierté du Made In France
+            <p>Nos ours en peluche sont fabriqués à la main dans nos ateliers en France.<br> La fierté du Made In France.
             </p>
         </div>
 
-        <h2>À vous de choisir parmi nos ours en peluche</h2>
+        <h1>À vous de choisir parmi nos ours en peluche</h1>
 
-            <caption>Liste des produits disponibles</caption>
+            <h2>Liste des produits disponibles</h2>
 
             <section  class="container g-4">
                     <div class="row" id="allproducts"></div>
                 <!--Insertion du contenu via le fichier index.js -->
-        </section>
+            </section>
     </main>
 
     <footer>
