--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="panier.css">
-    <script src='panier.js' async></script>
+
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <meta name="description"
         content="Bienvenue chez Orinoco ! Un e-commerce qui se démarque des autres sites en créant des applications thématiques et en vendant qu'un seul groupe de produits!">
 
@@ -20,7 +20,7 @@
 
         <header>
             <div class="head-section">
-                <h1><a href="index.html">Acceuil</a></h1>
+                <h1><a href="index.html">Accueil</a></h1>
                 <div class="comptes">
                     <div class="compte">
                         <div class="compte__icon">
@@ -42,62 +42,62 @@
         </header>
 
         <main>
-            <div class="panier">
+            <div class="panier" id="panierContainer">
                 <div class="etatPanier">
                 </div>
 
                 <div class="commande">
                     <table>
-                    <caption><i>Récapitulatif de votre commande</i></caption>
+                        <caption><i>Récapitulatif de votre commande</i></caption>
                         <thead>
                             <tr>
                                 <th id="article">Article</th>
-                                <th id="couleur">Couleur</th>
-                                <th id="quantite">Quantité</th>
-                                <th id="total">Prix unitaire</th>
-                                <th>Total de la ligne</th>
+                                <th id="couleur">Nom</th>
+                                <th id="quantite">Qté</th>
+                                <th id="total">PU</th>
+                                <th>Total ligne</th>
                                 <th>Action</th>
                             </tr>
                         </thead>
                         <tbody id="corpsPanier">
-                            <tr>
-                            </tr>
+
                         </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="5" id="totalPanier"></td>
+                                <td colspan="6" id="totalPanier"></td>
                             </tr>
                         </tfoot>
                     </table>
                 </div>
                 <div class="formulaire">
                     <div class="formulaire__fond">
-                        <form method="POST" name="confirmationAchat" id="confirmationAchat">
+                        <form method="POST" name="confirmationAchat" onsubmit="validationClick(event)"
+                            id="confirmationAchat">
                             <div class="selection-validation">
                                 <fieldset>
-                                <legend>Votre identité</legend>
-                                <label for="nom">Nom :</label>
-                                <input type="text" id="nom" placeholder="Nom"
-                                    title="Ne doit contenir ni caractères spéciaux, ni chiffres." required />
-                                <label for="prénom">Prénom :</label>
-                                <input type="text" id="prenom" placeholder="Prénom"
-                                    title="Ne doit contenir ni caractères spéciaux, ni chiffres." required />
-                                <label for="email">E-mail :</label>
-                                <input type="email" id="email" placeholder="nicolas.lecoq@domaine.fr" required />
-                                <span id="aideCourriel"></span>
+                                    <legend>Votre identité</legend>
+                                    <label for="nom">Nom :</label>
+                                    <input type="text" id="nom" placeholder="Nom"
+                                        title="Ne doit contenir ni caractères spéciaux, ni chiffres." required />
+                                    <span id="erreurnom"></span>
+                                    <label for="prénom">Prénom :</label>
+                                    <input type="text" id="prénom" placeholder="Prénom"
+                                        title="Ne doit contenir ni caractères spéciaux, ni chiffres." required />
+                                    <label for="email">E-mail :</label>
+                                    <input type="email" id="email" placeholder="nicolas.lecoq@domaine.fr" required />
+                                    <span id="aideCourriel"></span>
                                 </fieldset>
                                 <fieldset>
-                                <legend>Votre adresse de livraison</legend>
-                                <label for="adresse">Adresse :</label>
-                                <input type="text" id="adresse" placeholder="Adresse"
-                                    title="Ne doit contenir aucun caractères spéciaux" required />
-                                <label for="ville">Ville :</label>
-                                <input type="text" id="ville"
-                                    title="Ne doit contenir ni caractères spéciaux, ni chiffres" placeholder="Paris"
-                                    required />
+                                    <legend>Votre adresse de livraison</legend>
+                                    <label for="adresse">Adresse :</label>
+                                    <input type="text" id="adresse" placeholder="Adresse"
+                                        title="Ne doit contenir aucun caractères spéciaux" required />
+                                    <label for="ville">Ville :</label>
+                                    <input type="text" id="ville"
+                                        title="Ne doit contenir ni caractères spéciaux, ni chiffres" placeholder="Paris"
+                                        required />
                                 </fieldset>
-                                <input type="submit" name="validation" onsubmit="validationClick(event)" id="valider"
-                                    value="Valider votre commande" />
+                                <input type="submit" name="validation" id="valider" value="Valider votre commande" />
                             </div>
                         </form>
                     </div>
@@ -147,6 +147,8 @@
             crossorigin="anonymous"></script>
 
     </div>
+        <script src='panier.js' async></script>
+
 </body>
 
 </html>
