correction of the link of the basket

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div id="menuPanier">
-                <a href="/front-end/panier.html" role="button"><i class="fas fa-shopping-basket"></i> Panier</a>
+                <a href="../front-end/panier.html" role="button"><i class="fas fa-shopping-basket"></i> Panier</a>
             </div>
         </div>
     </header>
