correction of orinoco word

--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -115,7 +115,7 @@
                 </ul>
             </div>
             <div class="pied">
-                <p>Nos Services Orinico</p>
+                <p>Nos Services Orinoco</p>
                 <ul>
                     <li>Satisfait ou Remboursé</li>
                     <li>Livraison</li>
