--- a/front-end/index.html
+++ b/front-end/index.html
@@ -98,7 +98,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script src='index.js' async> </script>
+    <script src='index.js'> </script>
 
 </body>
 
