delete 'async' of the attribute script

--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -147,7 +147,7 @@
             crossorigin="anonymous"></script>
 
     </div>
-        <script src='panier.js' async></script>
+        <script src='panier.js' ></script>
 
 </body>
 
