change helper.js source position in artile.html fie and add it in index.html and panier.html filesi

--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -147,8 +147,8 @@
             crossorigin="anonymous"></script>
 
     </div>
+        <script src='helper.js'></script>
         <script src='panier.js' ></script>
-
 </body>
 
 </html>
