--- a/front-end/article.html
+++ b/front-end/article.html
@@ -59,7 +59,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     </div>
-    <script src='article.js'></script>
+        <script src='helper.js'></script>
+        <script src='article.js'></script>
 
 </body>
 
