--- a/front-end/index.html
+++ b/front-end/index.html
@@ -99,7 +99,7 @@
         crossorigin="anonymous"></script>
 
     <script src='index.js'> </script>
-
+    <script src='helper.js'> </script>
 </body>
 
 </html>
